tests/snapshots/runtime_error_fixtures/RuntimeErrors__exposing_runtime_divide_by_zero.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  ExposingRuntimeTarget
[8 of 8] Compiling  exposing_runtime_divide_by_zero
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9
  |
3 |         x / 0
  |         ^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at ExposingRuntimeTarget.boom (examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9)
  at main (examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx:4:5)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  ExposingRuntimeTarget
[8 of 8] Compiling  exposing_runtime_divide_by_zero
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9
  |
3 |         x / 0
  |         ^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at ExposingRuntimeTarget.boom (examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9)
  at main (examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx:4:5)
  at <main>
